Updated quiz to closer match specs, added counters for correct answers, current question and did basic code cleanup

--- a/jonathanin_tyot/kertotaulu_visa.html
+++ b/jonathanin_tyot/kertotaulu_visa.html
@@ -12,12 +12,14 @@
   </head>
   <body>
     <div id="body-wrapper">
+        <div id="questionText" style="display:none;"><p>Kysymys:<p><p id="progressQuestion">1</p><p id="totalQuestion">/ 5</p><p>Pisteet:</p><p id="correctQuestion">0</p></div>
         <h1 id="questionDisplay">Kertolasku-visa</h1>
+        <div id="finalText" style="display:none"><p>Sait <span id="totalScore">0</span> vastausta oikein!</p></div>
         <div class="container">
-            <button class="ans" id="ans_A" onclick="checkQuestionAnswerA()" style="display:none;">Answer A</button>
-            <button class="ans" id="ans_B" onclick="checkQuestionAnswerB()" style="display:none;">Answer B</button>
-            <button class="ans" id="ans_C" onclick="checkQuestionAnswerC()" style="display:none;">Answer C</button>
-            <button class="ans" id="ans_D" onclick="checkQuestionAnswerD()" style="display:none;">Answer D</button>
+            <button class="ans" id="ans_A" style="display:none;">Answer A</button>
+            <button class="ans" id="ans_B" style="display:none;">Answer B</button>
+            <button class="ans" id="ans_C" style="display:none;">Answer C</button>
+            <button class="ans" id="ans_D" style="display:none;">Answer D</button>
         </div>
       <button id ="navButton" onclick="generateQuestion()">Aloita</button>
     <script src="kertotaulu_visa.js"></script>
