--- a/sivusto/kertotauluvisa.html
+++ b/sivusto/kertotauluvisa.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kertolasku-visa</title>
-    <link rel="stylesheet" href="kertotaulu_sivu/styles.css">
+    <link rel="stylesheet" href="styles/kertotauluvisa.css">
     <link rel="stylesheet" id="google-fonts-1-css" href="https://fonts.googleapis.com/css?family=Nunito%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=auto&amp;ver=6.1.1" media="all">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
@@ -60,7 +60,7 @@
       <button id ="navButton" onclick="generateQuestion()">Aloita</button>
   </main> 
 
-<div id="footer">Made by: Ryhmä 2 @ kevät 2023</div>
+<div id="footer">Made by: Jonathan Holmberg @ kevät 2023</div>
 <script src="scripts/kertotauluvisa.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
