updated some css-styles and js-functions

--- a/sivusto/kertotauluvisa.html
+++ b/sivusto/kertotauluvisa.html
@@ -57,7 +57,7 @@
             <button class="ans" id="ans_C" style="display:none;">Answer C</button>
             <button class="ans" id="ans_D" style="display:none;">Answer D</button>
         </div>
-      <button id ="navButton" onclick="generateQuestion()">Aloita</button>
+      <button id ="navButton" onclick="generateQuestion()">ALOITA</button>
   </main> 
 
 <div id="footer">Made by: Jonathan Holmberg @ kevät 2023</div>
