added if statement to change text on final screen

--- a/sivusto/kertotauluvisa.html
+++ b/sivusto/kertotauluvisa.html
@@ -50,7 +50,7 @@
     <div id="body-wrapper">
         <div id="questionText" style="display:none;"><p>Kysymys:<p><p id="progressQuestion">1</p><p id="totalQuestion">/ 5</p><p>Pisteet:</p><p id="correctQuestion">0</p></div>
         <h1 id="questionDisplay">Kertolasku-visa</h1>
-        <div id="finalText" style="display:none"><p>Sait <span id="totalScore">0</span> vastausta oikein!</p></div>
+        <div id="finalText" style="display:none"><p>Sait <span id="totalScore">0</span> <span id="ifLessThanTwo">vastausta</span> oikein!</p></div>
         <div class="container">
             <button class="ans" id="ans_A" style="display:none;">Answer A</button>
             <button class="ans" id="ans_B" style="display:none;">Answer B</button>
