--- a/Miikan_tyot/Index.html
+++ b/Miikan_tyot/Index.html
@@ -134,8 +134,10 @@
                 <p>Sait oikein <br> <span id="total"></span>/5</p>
                 <p id="resultMessage"></p> <br>
                 <br>
-                <button class="finish"><a href="Index.html">Kokeile uudestaan!</a></button>
-                <button class="finish"><a href="...">Etusivulle</a></button> 
+                <div id="finalButtons">
+                    <button class="finish"><a href="Index.html">Kokeile uudestaan!</a></button>
+                    <button class="finish"><a href="...">Etusivulle</a></button>
+                </div> 
             </div>     
         </div>
     </div>
