--- a/Etusivu/index.html
+++ b/Etusivu/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Miikan_tyot/css/mathstyles.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 
@@ -43,136 +43,64 @@
       </nav>
   </header>
 
-  <div class="progress-bar-container">
-    <div class="progress-bar"></div>
-</div>
+  <main class="container">
+    <div class="row">
+      <div class="col-5 my-5">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            Optio, et quibusdam deleniti facere, cupiditate illum illo assumenda quis, 
+            itaque velit quisquam dolorem in soluta animi vel porro quia harum quo?
+        </p>
+      </div>
 
-<div id="quiz">
 
-    <div class="active question">
-        <p>Kengät maksavat Seppälässä <span id="priceOriginal"></span>€. Niiden hintaa alennetaan tammialeissa <span id="discount"></span>%. Paljonko on lopullinen hinta alennuksen jälkeen?</p>
-        <ul>
-            <li>
-                <label><input type="radio" name="q1" value="0"><span id="choice1of1"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q1" value="1"><span id="choice2of1"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q1" value="2"><span id="choice3of1"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q1" value="3"><span id="choice4of1"></span></label>
-            </li>
-            <button id="next1" class="hidden">Seuraava</button>
-        </ul> 
-    </div>
+      <div class="row">
 
-    <div class="question">
-        <div class="progress-bar-container">
-            <div class="progress-bar"></div>
+        <div class="col-sm-3">
+        <div class="card card-block">
+          <img class="card-img-top" src="./pic/math.jpg" alt="...">
+          <div class="card-block">
+            <h4 class="card-title">Matematiikka-visa</h4>
+            <a class="btn btn-outline-primary" href="#" role="button">Testaa tietämyksesi!</a>
+          </div>
+          </div>
         </div>
-        <p>Kitarataiteilija Gerhard Rihmakallo levytti uransa aikana <span id="hits"></span> loistavaa kappaletta. Yhteensä Gerhard levytti <span id="songs"></span> kappaletta. Arvostelijoiden mukaan näistä <span id="neutral"></span> oli ihan OK. Kuinka monen kappaleen voidaan katsoa olleen täyttä kuraa?</p>
-        <ul>
-            <li><label>
-                <input type="radio" name="q2" value="0"><span id="choice1of2"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q2" value="1"><span id="choice2of2"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q2" value="2"><span id="choice3of2"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q2" value="3"><span id="choice4of2"></span></label>
-            </li>
-            <button id="next2" class="hidden">Seuraava</button>
-        </ul> 
-    </div>
 
-    <div class="question">
-        <div class="progress-bar-container">
-            <div class="progress-bar"></div>
+        <div class="col-sm-3">
+        <div class="card card-block">
+          <img class="card-img-top" src="./pic/music.jpg" alt="...">
+          <div class="card-block">
+            <h4 class="card-title">Musiikki-visa</h4>
+            <a class="btn btn-outline-danger" href="#" role="button">Testaa tietämyksesi!</a>
+          </div>
         </div>
-        <p>Jos suunnikkaan korkeus on <span id="length"></span>m ja leveys <span id="width"></span>m, paljonko on suunnikkaan piiri?</p>
-        <ul>
-            <li>
-                <label><input type="radio" name="q3" value="0"><span id="choice1of3"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q3" value="1"><span id="choice2of3"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q3" value="2"><span id="choice3of3"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q3" value="3"><span id="choice4of3"></span></label>
-            </li>
-            <button id="next3" class="hidden">Seuraava</button>
-        </ul>
-    </div>
+      </div>
 
-    <div class="question">
-        <div class="progress-bar-container">
-            <div class="progress-bar"></div>
+        <div class="col-sm-3">
+        <div class="card card-block">
+          <img class="card-img-top" src="./pic/books.jpg" alt="...">
+          <div class="card-block">
+            <h4 class="card-title">Historia-visa</h4>
+            <a class="btn btn-outline-secondary" href="#" role="button">Testaa tietämyksesi!</a>
+          </div>
+          </div>
         </div>
-        <p>Jos kirja on <span id="booklength"></span> sivua pitkä ja Jörn Donner lukee sitä <span id="pace"></span> sivua päivässä, niin montako päivää Jörnillä menee että on saanut kirjan luettua?</p>
-        <ul>
-            <li>
-                <label><input type="radio" name="q4" value="0"><span id="choice1of4"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q4" value="1"><span id="choice2of4"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q4" value="2"><span id="choice3of4"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q4" value="3"><span id="choice4of4"></span></label>
-            </li>
-            <button id="next4" class="hidden">Seuraava</button>
-        </ul>
-    </div>
 
-    <div class="question">
-        <div class="progress-bar-container">
-            <div class="progress-bar"></div>
+
+          <div class="col-sm-3">
+        <div class="card card-block">
+          <img class="card-img-top" src="./pic/butterfly.jpg" alt="...">
+          <div class="card-block">
+            <h4 class="card-title">Neljäs visa</h4>
+            <a class="btn btn-outline-success" href="#" role="button">Testaa tietämyksesi!</a>
+          </div>
+          </div>
         </div>
-        <p>Pussissa on <span id="red"></span> punaista kuulaa, <span id="blue"></span> sinistä kuulaa ja <span id="green"></span> vihreää kuulaa . Jos pussista nostetaan yksi kuula, millä todennäköisyydellä kuula on vihreä?</p>
-        <ul>
-            <li>
-                <label><input type="radio" name="q5" value="0"><span id="choice1of5"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q5" value="1"><span id="choice2of5"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q5" value="2"><span id="choice3of5"></span></label>
-            </li>
-            <li>
-                <label><input type="radio" name="q5" value="3"><span id="choice4of5"></span></label>
-            </li>
-            <button id="next5" class="hidden">Lopeta visa</button>
-        </ul>
-    </div>
-
-    <div class="question">
-        <div class="results">
-            <p>Sait oikein <br> <span id="total"></span>/5</p>
-            <p id="resultMessage"></p> <br>
-            <br>
-            <button class="finish"><a href="Index.html">Kokeile uudestaan!</a></button>
-            <button class="finish"><a href="...">Etusivulle</a></button> 
-        </div>     
-    </div>
-</div>
-    
-<script src="../Miikan_tyot/js/matematiikkavisa.js"></script>
-
+      </div>
+</main> 
 
 
     <div id="footer">Footer</div>
- 
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
