--- a/Miikan_tyot/Matematiikkavisa MVe.html
+++ b/Miikan_tyot/Matematiikkavisa MVe.html
@@ -170,8 +170,8 @@
                 <p id="resultMessage"></p> <br>
                 <br>
                 <div id="finalButtons">
-                    <button class="finish"><a href="testing.html">Kokeile uudestaan!</a></button>
-                    <button class="finish"><a href="...">Etusivulle</a></button>
+                    <button class="finish"><a href="Matematiikkavisa MVe.html">Kokeile uudestaan!</a></button>
+                    <button class="finish"><a href="../Etusivu/index.html">Etusivulle</a></button>
                 </div> 
             </div>     
         </div>
