Päivitetty matematiikkavisa etusivulle.
Muutettu myös hieman etusivun layouttia, ainakin omalla läppärillä kuvat menivät footerin alle

--- a/Etusivu/index.html
+++ b/Etusivu/index.html
@@ -45,7 +45,6 @@
 
   <main class="container">
     <div class="row">
-      <div class="col-5 my-5">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
             Optio, et quibusdam deleniti facere, cupiditate illum illo assumenda quis, 
             itaque velit quisquam dolorem in soluta animi vel porro quia harum quo?
@@ -60,7 +59,7 @@
           <img class="card-img-top" src="./pic/math.jpg" alt="...">
           <div class="card-block">
             <h4 class="card-title">Matematiikka-visa</h4>
-            <a class="btn btn-outline-primary" href="#" role="button">Testaa tietämyksesi!</a>
+            <a class="btn btn-outline-primary" href="../Miikan_tyot/Matematiikkavisa MVe.html" role="button">Testaa tietämyksesi!</a>
           </div>
           </div>
         </div>
