--- a/Miikan_tyot/Matematiikkavisa MVe.html
+++ b/Miikan_tyot/Matematiikkavisa MVe.html
@@ -165,6 +165,7 @@
         </div>
 
         <div class="question">
+            <h2>No mites meni?</h2>
             <div class="results">
                 <p>Sait oikein <br> <span id="total"></span>/5</p>
                 <p id="resultMessage"></p> <br>
