--- a/Venlan_tyot/historiavisa.html
+++ b/Venlan_tyot/historiavisa.html
@@ -1,90 +1,90 @@
-   <!DOCTYPE html>
-	<html>
-	<head>
-		<title>Simple Quiz</title>
-		<link rel="stylesheet" type="text/css" href="historiavisa.css">
-	</head>
-	<body>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Simple Quiz</title>
+	<link rel="stylesheet" type="text/css" href="historiavisa.css">
+</head>
+<body>
 
-	<div id="startQuiz">
-		<h1 id="welcome">Tervetuloa historiavisaan!</h1>
-		<button id="startButton" onclick="startQuiz()">Aloita visa</button>
+<div id="startQuiz">
+	<h1 id="welcome">Tervetuloa historiavisaan!</h1>
+	<button id="startButton" onclick="startQuiz()">Aloita visa</button>
+</div>
+
+	<div class="container" id="container1" name="container"> 
+		<h4>Kysymys 1: Milloin Euroopassa ja sen lähiseudulla riehunut ruttoepidemia, jota kutsutaan nimellä "musta surma" alkoi?</h4>
+		<input type="radio" name="answer1">A. 1200-luvulla<br>
+		<input type="radio" name="answer1" id="correct1" value="true">B. 1300-luvulla<br>
+		<input type="radio" name="answer1">C. 1400-luvulla<br>
+		<input type="radio" name="answer1">D. 1500-luvulla<br><br>
+		<button class="next" onclick="checkAnswer1()">Tarkista</button>
+		<button class="next" id="Q1button" onclick="nextQuestion2()">Seuraava</button>
+		<p id="correctAnswers1"></p>
+		
 	</div>
 
-		<div class="container" id="container1" name="container">
-			Kysymys 1: Milloin Euroopassa ja sen lähiseudulla riehunut ruttoepidemia, jota kutsutaan nimellä "musta surma" alkoi? <br><br>
-			<input type="radio" name="answer1">A. 1200-luvulla<br>
-			<input type="radio" name="answer1" id="correct1" value="true">B. 1300-luvulla<br>
-			<input type="radio" name="answer1">C. 1400-luvulla<br>
-			<input type="radio" name="answer1">D. 1500-luvulla<br><br>
-			<button class="next" onclick="checkAnswer1()">Tarkista</button>
-			<button class="next" id="Q1button" onclick="nextQuestion2()">Seuraava</button>
-			<p id="correctAnswers1"></p>
-			
-		</div>
-
+	
+	<div class="container" id="container2" name="container">
+		<h4>Kysymys 2: Kuka oli antiikin Kreikkalaisessa mytologiassa rakkauden jumalatar?</h4>
+		<input type="radio" name="answer2">A. Zeus<br>
+		<input type="radio" name="answer2" >B. Amor<br>
+		<input type="radio" name="answer2">C. Poseidon<br>
+		<input type="radio" name="answer2" id="correct2" value="true">D. Afrodite<br><br>
+		<button class="next" onclick="checkAnswer2()">Tarkista</button>
+		<button class="next" id="Q2button" onclick="nextQuestion3()">Seuraava</button>
+		<p id="correctAnswers2"></p>
 		
-		<div class="container" id="container2" name="container">
-			Kysymys 2: Kuka oli antiikin Kreikkalaisessa mytologiassa rakkauden jumalatar?<br><br>
-			<input type="radio" name="answer2">A. Zeus<br>
-			<input type="radio" name="answer2" >B. Amor<br>
-			<input type="radio" name="answer2">C. Poseidon<br>
-			<input type="radio" name="answer2" id="correct2" value="true">D. Afrodite<br><br>
-			<button class="next" onclick="checkAnswer2()">Tarkista</button>
-			<button class="next" id="Q2button" onclick="nextQuestion3()">Seuraava</button>
-			<p id="correctAnswers2"></p>
-			
-		</div>
-
-		
-		<div class="container" id="container3" name="container">
-			Kysymys 3: Minkälainen uskonto Suomessa oli ennen kristinuskon saapumista Suomeen? <br><br>
-			<input type="radio" name="answer3">A. Suomalaiset eivät uskoneet mihinkään erityisesti<br>
-			<input type="radio" name="answer3" >B. Suomessa palvottiin samoja jumalia kuin antiikin Roomassa<br>
-			<input type="radio" name="answer3"id="correct3" value="true">C. Suomalainen muinaisuskonto, jossa uskottiin moniin jumaliin ja palvottiin vainajia<br>
-			<input type="radio" name="answer3">D. Suomalaiset ovat aina olleet kristittyjä<br><br>
-			<button class="next" onclick="checkAnswer3()">Tarkista</button>
-			<button class="next" id="Q3button" onclick="nextQuestion4()">Seuraava</button>
-			<p id="correctAnswers3"></p>
-			
-		</div>
-
-		
-		<div class="container" id="container4" name="container">
-			Kysymys 4: Millä luvulla Euroopassa alkoi uskonpuhdistus eli reformaatio?<br><br>
-			<input type="radio" name="answer4">A. 1400-luvulla<br>
-			<input type="radio" name="answer4" id="correct4" value="true">B. 1500-luvulla<br>
-			<input type="radio" name="answer4">C. 1600-luvulla<br>
-			<input type="radio" name="answer4">D. 1700-luvulla<br><br>
-			<button class="next" onclick="checkAnswer4()">Tarkista</button>
-			<button class="next" id="Q4button" onclick="nextQuestion5()">Seuraava</button>
-			<p id="correctAnswers4"></p>
-			
-		</div>
-
-		
-		<div class="container" id="container5" name="container">
-			Kysymys 5: Ketä merkittävää henkilöä pidetään suomen kirjakielen ja suomenkielisen kirjallisuuden luojana? <br><br>
-			<input type="radio" name="answer5">A. Minna Canth<br>
-			<input type="radio" name="answer5" >B. Piispa Henrik<br>
-			<input type="radio" name="answer5">C. Martti Luther<br>
-			<input type="radio" name="answer5"id="correct5" value="true">D. Mikael Agricola<br><br>
-			<button class="next" onclick="checkAnswer5()">Tarkista</button>
-			<button class="next" id="resultsButton" onclick="results()">Tulokset</button>
-			<p id="correctAnswers5"></p>
-			
-			
-		</div>
-		<div class="quizProgress" id="quizProgress"> </div> <br> 
-		
-		<div class="results" id="results"></div>
-		<div id="feedback"></div>
-
-		
-		 <div id="resetButton" ><button onclick="resetQuiz()">Aloita alusta</button></div>
-
+	</div>
 
 	
-	<script src="historiavisa.js"></script>
+	<div class="container" id="container3" name="container">
+		<h4>Kysymys 3: Minkälainen uskonto Suomessa oli ennen kristinuskon saapumista Suomeen?</h4>
+		<input type="radio" name="answer3">A. Suomalaiset eivät uskoneet mihinkään erityisesti.<br>
+		<input type="radio" name="answer3" >B. Suomessa palvottiin samoja jumalia kuin antiikin Roomassa.<br>
+		<input type="radio" name="answer3"id="correct3" value="true">C. Suomalainen muinaisuskonto, jossa uskottiin moniin jumaliin ja palvottiin vainajia.<br>
+		<input type="radio" name="answer3">D. Suomalaiset ovat aina olleet kristittyjä.<br><br>
+		<button class="next" onclick="checkAnswer3()">Tarkista</button>
+		<button class="next" id="Q3button" onclick="nextQuestion4()">Seuraava</button>
+		<p id="correctAnswers3"></p>
+		
+	</div>
+
+	
+	<div class="container" id="container4" name="container">
+		<h4>Kysymys 4: Millä luvulla Euroopassa alkoi uskonpuhdistus eli reformaatio?</h4>
+		<input type="radio" name="answer4">A. 1400-luvulla<br>
+		<input type="radio" name="answer4" id="correct4" value="true">B. 1500-luvulla<br>
+		<input type="radio" name="answer4">C. 1600-luvulla<br>
+		<input type="radio" name="answer4">D. 1700-luvulla<br><br>
+		<button class="next" onclick="checkAnswer4()">Tarkista</button>
+		<button class="next" id="Q4button" onclick="nextQuestion5()">Seuraava</button>
+		<p id="correctAnswers4"></p>
+		
+	</div>
+
+	
+	<div class="container" id="container5" name="container">
+		<h4>Kysymys 5: Ketä merkittävää henkilöä pidetään suomen kirjakielen ja suomenkielisen kirjallisuuden luojana?</h4>
+		<input type="radio" name="answer5">A. Minna Canth<br>
+		<input type="radio" name="answer5" >B. Piispa Henrik<br>
+		<input type="radio" name="answer5">C. Martti Luther<br>
+		<input type="radio" name="answer5"id="correct5" value="true">D. Mikael Agricola<br><br>
+		<button class="next" onclick="checkAnswer5()">Tarkista</button>
+		<button class="next" id="resultsButton" onclick="results()">Tulokset</button>
+		<p id="correctAnswers5"></p>
+		
+		
+	</div>
+	<div class="quizProgress" id="quizProgress"> </div> <br> 
+	
+	<div class="results" id="results"></div>
+	<div class="feedback" id="feedback"></div>
+
+	
+	 <div class="resetButton" id="resetButton" ><button onclick="resetQuiz()">Aloita alusta</button></div>
+
+
+
+<script src="historiavisa.js"></script>
 </body>
 </html>
