Musavisa linkitetty etusivulle

--- a/Etusivu/index.html
+++ b/Etusivu/index.html
@@ -69,7 +69,7 @@
           <img class="card-img-top" src="./pic/music.jpg" alt="...">
           <div class="card-block">
             <h4 class="card-title">Musiikki-visa</h4>
-            <a class="btn btn-outline-danger" href="#" role="button">Testaa tietämyksesi!</a>
+            <a class="btn btn-outline-danger" href="../Reetan_tyot/index.html" role="button">Testaa tietämyksesi!</a>
           </div>
         </div>
       </div>
