--- a/Reetan_tyot/index.html
+++ b/Reetan_tyot/index.html
@@ -3,9 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <title>Musavisa 6. luokkalaisille</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+
+  <header>
+    <nav class="navbar bg-dark" data-bs-theme="dark">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Tervetuloa</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Tietoja</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Tietovisat
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Matematiikka-visa</a></li>
+                  <li><a class="dropdown-item" href="#">Musiikki-visa</a></li>
+                  <li><a class="dropdown-item" href="#">Historia-visa</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+  </header>
+
 <div class="app">
 <h1>Musavisa</h1>
 <div class="quiz">
@@ -22,6 +56,10 @@
 <div id="info" class="info">Tähän tulee tietoa oikeasta vastauksesta</div>
 
 </div>
-</div>
-  <script src="js/javascript.js"></script>
+</div>  
+<div id="footer">Footer</div>
+
+<script src="js/javascript.js"></script>
+</body>
+</html>
 
