--- a/sivusto/kertotauluvisa.html
+++ b/sivusto/kertotauluvisa.html
@@ -17,27 +17,27 @@
     <nav class="navbar bg-dark" data-bs-theme="dark">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Visasivusto</a>
+          <a class="navbar-brand" href="./index.html">Visasivusto</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Etusivu</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Etusivu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tietoja</a>
+                <a class="nav-link" href="./tietojasivu.html">Tietoja</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Tietovisat
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Matematiikka-visa</a></li>
-                  <li><a class="dropdown-item" href="#">Kertotaulu-visa</a></li>
-                  <li><a class="dropdown-item" href="#">Musiikki-visa</a></li>
-                  <li><a class="dropdown-item" href="#">Historia-visa</a></li>
+                  <li><a class="dropdown-item" href="./musiikki_visa/">Matematiikka-visa</a></li>
+                  <li><a class="dropdown-item" href="./kertotauluvisa.html">Kertotaulu-visa</a></li>
+                  <li><a class="dropdown-item" href="./musiikkivisa.html">Musiikki-visa</a></li>
+                  <li><a class="dropdown-item" href="./historiavisa.html">Historia-visa</a></li>
                 </ul>
               </li>
             </ul>
