updated links (minor bugi)

--- a/sivusto/kertotauluvisa.html
+++ b/sivusto/kertotauluvisa.html
@@ -34,7 +34,7 @@
                   Tietovisat
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./musiikki_visa/">Matematiikka-visa</a></li>
+                  <li><a class="dropdown-item" href="./matikkavisa.html">Matematiikka-visa</a></li>
                   <li><a class="dropdown-item" href="./kertotauluvisa.html">Kertotaulu-visa</a></li>
                   <li><a class="dropdown-item" href="./musiikkivisa.html">Musiikki-visa</a></li>
                   <li><a class="dropdown-item" href="./historiavisa.html">Historia-visa</a></li>
