--- a/Reetan_tyot/index.html
+++ b/Reetan_tyot/index.html
@@ -12,14 +12,14 @@
     <nav class="navbar bg-dark" data-bs-theme="dark">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Tervetuloa</a>
+          <a class="navbar-brand" href="#">Visasivusto</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Etusivu</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Tietoja</a>
@@ -30,6 +30,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Matematiikka-visa</a></li>
+                  <li><a class="dropdown-item" href="#">Kertotaulu-visa</a></li>
                   <li><a class="dropdown-item" href="#">Musiikki-visa</a></li>
                   <li><a class="dropdown-item" href="#">Historia-visa</a></li>
                 </ul>
