--- a/sivusto/musiikkivisa.html
+++ b/sivusto/musiikkivisa.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" id="google-fonts-1-css" href="https://fonts.googleapis.com/css?family=Nunito%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=auto&amp;ver=6.1.1" media="all">
-    <link rel="stylesheet" href="./etusivu/style/style.css">
+    <link rel="stylesheet" href="../sivusto/styles/musavisa_styles.css">
 </head>
 <body>
 
@@ -46,11 +46,26 @@
   </header>
 
   <main class="container">
+    <h1>Musavisa</h1>
+  <h2 id="question" class="questions">Kysymys tähän</h2>
+  <div id="answer-buttons" class="button-grid">
+    <button class="btn">Vastaus 1</button>
+    <button class="btn">Vastaus 2</button>
+    <button class="btn">Vastaus 3</button>
+    <button class="btn">Vastaus 4</button>
+  </div>
+
+<button id="next-button" class="nextBtn">Seuraava</button><br>
+
+<div id="info" class="info">Tähän tulee tietoa oikeasta vastauksesta</div>
+
+</div>
+</div> 
   </main> 
 
 
-    <div id="footer">Made by: Ryhmä 2 @ kevät 2023</div>
- 
+    <div id="footer">Made by: Reeta Valtamäki 2 @ kevät 2023</div>
+    <script src="../sivusto/src/musavisa_js.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
