--- a/Venlan_tyot/historiavisa.html
+++ b/Venlan_tyot/historiavisa.html
@@ -2,9 +2,42 @@
 <html>
 <head>
 	<title>Simple Quiz</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="historiavisa.css">
 </head>
 <body>
+
+	<header>
+		<nav class="navbar bg-dark" data-bs-theme="dark">
+		  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+			<div class="container-fluid">
+			  <a class="navbar-brand" href="#">Tervetuloa</a>
+			  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+				  <li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">Home</a>
+				  </li>
+				  <li class="nav-item">
+					<a class="nav-link" href="#">Tietoja</a>
+				  </li>
+				  <li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+					  Tietovisat
+					</a>
+					<ul class="dropdown-menu">
+					  <li><a class="dropdown-item" href="#">Matematiikka-visa</a></li>
+					  <li><a class="dropdown-item" href="#">Musiikki-visa</a></li>
+					  <li><a class="dropdown-item" href="#">Historia-visa</a></li>
+					</ul>
+				  </li>
+				</ul>
+			  </div>
+			</div>
+		  </nav>
+	  </header>
 
 <div id="startQuiz">
 	<h1 id="welcome">Tervetuloa historiavisaan!</h1>
@@ -84,7 +117,9 @@
 	 <div class="resetButton" id="resetButton" ><button onclick="resetQuiz()">Aloita alusta</button></div>
 
 
+	 <div id="footer">Footer</div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 <script src="historiavisa.js"></script>
 </body>
 </html>
