--- a/sivusto/historiavisa.html
+++ b/sivusto/historiavisa.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" id="google-fonts-1-css" href="https://fonts.googleapis.com/css?family=Nunito%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=auto&amp;ver=6.1.1" media="all">
     <link rel="stylesheet" href="./etusivu/style/style.css">
+    <link rel="stylesheet" href="../sivusto/historia_sivu/historiavisa.css">
 </head>
 <body>
 
@@ -23,20 +24,20 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Etusivu</a>
+                <a class="nav-link active" aria-current="page" href="../sivusto/index.html">Etusivu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tietoja</a>
+                <a class="nav-link" href="../sivusto/tietojasivu.html">Tietoja</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Tietovisat
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Matematiikka-visa</a></li>
-                  <li><a class="dropdown-item" href="#">Kertotaulu-visa</a></li>
-                  <li><a class="dropdown-item" href="#">Musiikki-visa</a></li>
-                  <li><a class="dropdown-item" href="#">Historia-visa</a></li>
+                  <li><a class="dropdown-item" href="../sivusto/matikkavisa.html">Matematiikka-visa</a></li>
+                  <li><a class="dropdown-item" href="../sivusto/kertotauluvisa.html">Kertotaulu-visa</a></li>
+                  <li><a class="dropdown-item" href="../sivusto/musiikkivisa.html">Musiikki-visa</a></li>
+                  <li><a class="dropdown-item" href="../sivusto/historiavisa.html">Historia-visa</a></li>
                 </ul>
               </li>
             </ul>
@@ -45,12 +46,89 @@
       </nav>
   </header>
 
-  <main class="container">
-  </main> 
+ 
+<div id="startQuiz">
+	<h1 id="welcome">Tervetuloa historiavisaan!</h1>
+	<button id="startButton" onclick="startQuiz()">Aloita visa</button>
+</div>
+
+	<div class="container" id="container1" name="container"> 
+		<h4>Kysymys 1: Milloin Euroopassa ja sen lähiseudulla riehunut ruttoepidemia, jota kutsutaan nimellä "musta surma" alkoi?</h4>
+		<input type="radio" name="answer1">A. 1200-luvulla<br>
+		<input type="radio" name="answer1" id="correct1" value="true">B. 1300-luvulla<br>
+		<input type="radio" name="answer1">C. 1400-luvulla<br>
+		<input type="radio" name="answer1">D. 1500-luvulla<br><br>
+		<button class="next" onclick="checkAnswer1()">Tarkista</button>
+		<button class="next" id="Q1button" onclick="nextQuestion2()">Seuraava</button>
+		<p id="correctAnswers1"></p>
+		
+	</div>
+
+	
+	<div class="container" id="container2" name="container">
+		<h4>Kysymys 2: Kuka oli antiikin Kreikkalaisessa mytologiassa rakkauden jumalatar?</h4>
+		<input type="radio" name="answer2">A. Zeus<br>
+		<input type="radio" name="answer2" >B. Amor<br>
+		<input type="radio" name="answer2">C. Poseidon<br>
+		<input type="radio" name="answer2" id="correct2" value="true">D. Afrodite<br><br>
+		<button class="next" onclick="checkAnswer2()">Tarkista</button>
+		<button class="next" id="Q2button" onclick="nextQuestion3()">Seuraava</button>
+		<p id="correctAnswers2"></p>
+		
+	</div>
+
+	
+	<div class="container" id="container3" name="container">
+		<h4>Kysymys 3: Minkälainen uskonto Suomessa oli ennen kristinuskon saapumista Suomeen?</h4>
+		<input type="radio" name="answer3">A. Suomalaiset eivät uskoneet mihinkään erityisesti.<br>
+		<input type="radio" name="answer3" >B. Suomessa palvottiin samoja jumalia kuin antiikin Roomassa.<br>
+		<input type="radio" name="answer3"id="correct3" value="true">C. Suomalainen muinaisuskonto, jossa uskottiin moniin jumaliin ja palvottiin vainajia.<br>
+		<input type="radio" name="answer3">D. Suomalaiset ovat aina olleet kristittyjä.<br><br>
+		<button class="next" onclick="checkAnswer3()">Tarkista</button>
+		<button class="next" id="Q3button" onclick="nextQuestion4()">Seuraava</button>
+		<p id="correctAnswers3"></p>
+		
+	</div>
+
+	
+	<div class="container" id="container4" name="container">
+		<h4>Kysymys 4: Millä luvulla Euroopassa alkoi uskonpuhdistus eli reformaatio?</h4>
+		<input type="radio" name="answer4">A. 1400-luvulla<br>
+		<input type="radio" name="answer4" id="correct4" value="true">B. 1500-luvulla<br>
+		<input type="radio" name="answer4">C. 1600-luvulla<br>
+		<input type="radio" name="answer4">D. 1700-luvulla<br><br>
+		<button class="next" onclick="checkAnswer4()">Tarkista</button>
+		<button class="next" id="Q4button" onclick="nextQuestion5()">Seuraava</button>
+		<p id="correctAnswers4"></p>
+		
+	</div>
+
+	
+	<div class="container" id="container5" name="container">
+		<h4>Kysymys 5: Ketä merkittävää henkilöä pidetään suomen kirjakielen ja suomenkielisen kirjallisuuden luojana?</h4>
+		<input type="radio" name="answer5">A. Minna Canth<br>
+		<input type="radio" name="answer5" >B. Piispa Henrik<br>
+		<input type="radio" name="answer5">C. Martti Luther<br>
+		<input type="radio" name="answer5"id="correct5" value="true">D. Mikael Agricola<br><br>
+		<button class="next" onclick="checkAnswer5()">Tarkista</button>
+		<button class="next" id="resultsButton" onclick="results()">Tulokset</button>
+		<p id="correctAnswers5"></p>
+		
+		
+	</div>
+	<div class="quizProgress" id="quizProgress"> </div> <br> 
+	
+	<div class="results" id="results"></div>
+	<div class="feedback" id="feedback"></div>
+
+	
+	 <div class="resetButton" id="resetButton" ><button onclick="resetQuiz()">Aloita alusta</button></div>
+
 
 
     <div id="footer">Made by: Ryhmä 2 @ kevät 2023</div>
  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="../sivusto/historia_sivu/historiavisa.js"></script>
 </body>
 </html>
