--- a/sivusto/historiavisa.html
+++ b/sivusto/historiavisa.html
@@ -48,7 +48,7 @@
 
  
 <div id="startQuiz">
-	<h1 id="welcome">Tervetuloa historiavisaan!</h1>
+	<h1 class="welcomeText" id="welcome">Tervetuloa historiavisaan!</h1>
 	<button id="startButton" onclick="startQuiz()">Aloita visa</button>
 </div>
 
