Lisätty linkki historiavisaan

--- a/sivusto/index.html
+++ b/sivusto/index.html
@@ -90,7 +90,7 @@
           <img class="card-img-top" src="./etusivu/pic/books.jpg" alt="...">
           <div class="card-block">
             <h4 class="card-title">Historia-visa</h4>
-            <a class="btn btn-outline-secondary" href="#" role="button">Testaa tietämyksesi!</a>
+            <a class="btn btn-outline-secondary" href="../sivusto/historiavisa.html" role="button">Testaa tietämyksesi!</a>
           </div>
           </div>
         </div>
