--- a/sivusto/musiikkivisa.html
+++ b/sivusto/musiikkivisa.html
@@ -64,7 +64,7 @@
   </main> 
 
 
-    <div id="footer">Made by: Reeta Valtamäki 2 @ kevät 2023</div>
+    <div id="footer">Made by: Reeta Valtamäki @ kevät 2023</div>
     <script src="../sivusto/src/musavisa_js.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
