musavisa sivun linkitys etusivulle

--- a/sivusto/index.html
+++ b/sivusto/index.html
@@ -80,7 +80,7 @@
           <img class="card-img-top" src="./etusivu/pic/music.jpg" alt="...">
           <div class="card-block">
             <h4 class="card-title">Musiikki-visa</h4>
-            <a class="btn btn-outline-danger" href="#" role="button">Testaa tietämyksesi!</a>
+            <a class="btn btn-outline-danger" href="./musiikkivisa.html" role="button">Testaa tietämyksesi!</a>
           </div>
         </div>
       </div>
