Päivitin linkit visasivustoille etusivulta

--- a/sivusto/index.html
+++ b/sivusto/index.html
@@ -60,7 +60,7 @@
           <img class="card-img-top" src="./etusivu/pic/math.jpg" alt="...">
           <div class="card-block">
             <h4 class="card-title">Matematiikka-visa</h4>
-            <a class="btn btn-outline-primary" href="#" role="button">Testaa tietämyksesi!</a>
+            <a class="btn btn-outline-primary" href="./matikkavisa.html" role="button">Testaa tietämyksesi!</a>
           </div>
           </div>
         </div>
@@ -70,7 +70,7 @@
             <img class="card-img-top" src="./etusivu/pic/butterfly.jpg" alt="...">
             <div class="card-block">
               <h4 class="card-title">Kertotaulu-visa</h4>
-              <a class="btn btn-outline-success" href="#" role="button">Testaa tietämyksesi!</a>
+              <a class="btn btn-outline-success" href="./kertotauluvisa.html" role="button">Testaa tietämyksesi!</a>
             </div>
             </div>
           </div>
