lisää pikku päivityksiä linkkeihin

--- a/sivusto/index.html
+++ b/sivusto/index.html
@@ -33,10 +33,10 @@
                   Tietovisat
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Matematiikka-visa</a></li>
-                  <li><a class="dropdown-item" href="#">Kertotaulu-visa</a></li>
-                  <li><a class="dropdown-item" href="#">Musiikki-visa</a></li>
-                  <li><a class="dropdown-item" href="#">Historia-visa</a></li>
+                  <li><a class="dropdown-item" href="./matikkavisa.html">Matematiikka-visa</a></li>
+                  <li><a class="dropdown-item" href="./kertotauluvisa.html">Kertotaulu-visa</a></li>
+                  <li><a class="dropdown-item" href="./musiikkivisa.html">Musiikki-visa</a></li>
+                  <li><a class="dropdown-item" href="./historiavisa.html">Historia-visa</a></li>
                 </ul>
               </li>
             </ul>
