--- a/sivusto/musiikkivisa.html
+++ b/sivusto/musiikkivisa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Musiikkivisa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" id="google-fonts-1-css" href="https://fonts.googleapis.com/css?family=Nunito%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=auto&amp;ver=6.1.1" media="all">
     <link rel="stylesheet" href="../sivusto/styles/musavisa_styles.css">
@@ -45,7 +45,7 @@
       </nav>
   </header>
 
-  <main class="container">
+  <main class="quiz">
     <h1>Musavisa</h1>
   <h2 id="question" class="questions">Kysymys tähän</h2>
   <div id="answer-buttons" class="button-grid">
