--- a/sivusto/historiavisa.html
+++ b/sivusto/historiavisa.html
@@ -46,7 +46,8 @@
       </nav>
   </header>
 
- 
+
+  <main class="container">
 <div id="startQuiz">
 	<h1 class="welcomeText" id="welcome">Tervetuloa historiavisaan!</h1>
 	<button id="startButton" onclick="startQuiz()">Aloita visa</button>
@@ -123,10 +124,12 @@
 
 	
 	 <div class="resetButton" id="resetButton" ><button onclick="resetQuiz()">Aloita alusta</button></div>
+	</main>
 
 
 
-    <div id="footer">Made by: Ryhmä 2 @ kevät 2023</div>
+
+    <div id="footer">Made by: Venla Äijälä @ kevät 2023</div>
  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="../sivusto/historia_sivu/historiavisa.js"></script>
