--- a/sivusto/musiikkivisa.html
+++ b/sivusto/musiikkivisa.html
@@ -16,7 +16,7 @@
     <nav class="navbar bg-dark" data-bs-theme="dark">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand">Visasivusto</a>
+          <a class="navbar-brand" href="./index.html">Visasivusto</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
