--- a/sivusto/tietojasivu.html
+++ b/sivusto/tietojasivu.html
@@ -65,7 +65,7 @@
         <td>Musavisa</td>
       </tr>
       <tr>
-        <td>Venla Äijäla</td>
+        <td>Venla Äijälä</td>
         <td>Historiavisa</td>
       </tr>
     </table>
